<resources>
    <string name="app_name">Mobile App Project</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_login_short">Login</string>
    <string name="welcome">"Welcome! Guest"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reg_code">Code</string>
    <string name="link_sign_up">Don\'t have an account? Sign Up</string>
    <string name="link_login">Already have an account? Login</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_welcome_title">Handcraft Market</string>
    <string name="home_welcome">We collect works designed by Hong Kong, provide space to buy and sell handmade works, and hope to let more people know the story behind Hong Kong handmade works</string>
    <string name="store">Store</string>
    <string name="remark">Remark</string>
    <string name="validity_period">Validity period</string>
    <string name="menu_home">Home</string>
    <string name="menu_admin">Admin Panel</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_message">Message</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="addBy">Add By</string>
    <string name="delete">Delete</string>
    <string name="craft_photo_preview">Craft Photo Preview</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="role">Role</string>
    <string name="email">Email</string>
    <string name="admin">Admin</string>
    <string name="no_results">No Results</string>
</resources>