<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.swivelsoftware.mobile_app_project.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.swivelsoftware.mobile_app_project.ui.admin.AdminFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin" />

    <fragment
        android:id="@+id/nav_bookmark"
        android:name="com.swivelsoftware.mobile_app_project.ui.bookmark.BookmarkFragment"
        android:label="@string/menu_bookmark" />
</navigation>