<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/user_key"
                android:layout_height="wrap_content"
                android:text="@string/admin" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/user_key"
                android:layout_height="wrap_content"
                android:text="@string/firstName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/user_key"
                android:layout_height="wrap_content"
                android:text="@string/lastName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/user_key"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/user_key"
                android:layout_height="wrap_content"
                android:text="@string/role" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/user_key"
                android:layout_height="wrap_content"
                android:text="@string/bookmarks" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_bookmarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>